CICO-34289 fixing issue with alignment of next button

--- a/zest_station/css/themes/yotel/theme.less
+++ b/zest_station/css/themes/yotel/theme.less
@@ -487,11 +487,18 @@
 #main.centered #content.input-field-contents {
     height: 100% !important;
     padding-top: 7%;
-    .form .input{
-        border: 3px white solid !important;
-        border-radius: 10px;
-        background: #835C85;
+    .form {
+        .input{
+            border: 2px white solid !important;
+            border-radius: 10px;
+            background: #835C85;
+        }
+        .button {
+            line-height: 68px;
+            height: 68px;
+        }
     }
+        
 }
 
 
